# Test_Besnard_Consulting

backend_DRF/: .coverage  db.sqlite3  manage.py  pyproject.toml  pytest.ini
backend_DRF/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend_DRF/api/migrations/: 0001_initial.py
backend_DRF/api/tests/: test_api.py
backend_DRF/values_principles/: asgi.py  settings.py  wsgi.py
frontend_VUE/values_and_principles/: README.md  babel.config.js  jest.config.js  package-lock.json  package.json
frontend_VUE/values_and_principles/src/: App.vue  main.js
frontend_VUE/values_and_principles/src/components/: Header.vue  HelloWorld.vue  PrincipleEdit.vue  PrincipleItem.vue  Principles.vue  ValueEdit.vue  ValueItem.vue  Values.vue
frontend_VUE/values_and_principles/vue-test-besnard-cons/: README.md  package.json
frontend_VUE/values_and_principles/vue-test-besnard-cons/src/: App.vue  main.js
frontend_VUE/values_and_principles/vue-test-besnard-cons/src/components/: Header.vue  PrincipleEdit.vue  PrincipleItem.vue  Principles.vue  ValueEdit.vue  ValueItem.vue  Values.vue
frontend_VUE/values_and_principles/vue-test-besnard-cons/tests/unit/: ValueEdit.spec.js  ValueItem.spec.js  Values.spec.js
frontend_VUE/values_and_principles/vue-test-besnard-cons/tests/unit/__snapshots__/: ValueEdit.spec.js.snap  Values.spec.js.snap
